--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,6 +54,8 @@ services:
       - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_PASSWORD}
     volumes:
       - ./grafana/provisioning:/etc/grafana/provisioning
+      - ./grafana/grafana.ini:/etc/grafana/grafana.ini
+
     ports:
       - "3001:3000"
 
@@ -85,6 +87,19 @@ services:
       - ./cert_monitor/config.yaml:/app/config.yaml
     depends_on:
       - cert-db
+
+  nginx:
+    image: nginx:latest
+    container_name: nginx-server
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - cert-api
+      - prometheus
+      - grafana
+
 
 volumes:
   db-data:
