--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,11 +57,12 @@ services:
       - ./grafana/grafana.ini:/etc/grafana/grafana.ini
 
     ports:
-      - "3001:3000"
+     - "3001:3000"
 
   adminer:
     image: adminer
     restart: always
+    command: php -S 0.0.0.0:8080 -t /var/www/html
     ports:
       - "8080:8080"
     depends_on:
