Update email recipient format, adjust Prometheus scrape interval, and comment out unused port mappings in Docker Compose

--- a/cert_monitor/config.yaml
+++ b/cert_monitor/config.yaml
@@ -13,5 +13,6 @@ alert_channels:
     smtp_host: smtp.example.com
     smtp_port: 587
     from: alerts@example.com
-    to: team@example.com
+    to:
+      - team@example.com
     send_email: true
